# iro-cuda-ax

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  README.md  SECURITY.md  VISION.md  ax_ax.md  plan.md
cmake/: iro-cuda-axConfig.cmake.in
docs/: ax_plan.md  ax_sm89_sota.md  kernel_hit_list.md  testing_strategy.md
docs/architecture/: layer_contract_law.md  protocol_planes.md  reference_kernels.md
docs/architecture/adr/: 0001-layer-contract-law.md  0002-protocol-catalog-and-planes.md
examples/: sm89_ax_div_example.cu
include/: iro_cuda_ax_core.hpp
include/axp/: concepts.hpp  intent.hpp  l3_presets.hpp  l4.hpp  prelude.hpp  primitives.hpp  recipes.hpp  state.hpp  swizzle.hpp  target.hpp  version.hpp
include/axp/bundles/: checklist.hpp  resource_bundles.hpp  token_bundles.hpp
include/axp/detail/: conversion.hpp  math.hpp  participation_tokens.hpp  resources.hpp  type_traits.hpp
include/axp/diag/: codes.hpp  messages.hpp
include/axp/graph/: hash.hpp  index.hpp  spec.hpp  verify.hpp
include/axp/ir/: concepts.hpp  index.hpp  lowering_contract.hpp
include/axp/kits/: index.hpp  intent.hpp
include/axp/l4/: bind_key.hpp  graph_registry_index.hpp  lowering.hpp  lowering_presets.hpp  manifest_enable.hpp  resolve.hpp
manifests/: kernels_sm100.json  kernels_sm89.json  kernels_sm90.json
scripts/: build_ax_tool.sh  check.sh  compile.sh  gen_layer_adapters.sh  precompile.sh  run_sm89_ax_div_example.sh
tests/compile/: ax_asserts.cu  ax_asserts_defs.hpp  ax_asserts_primitives.cu
tests/kernels/: ax_inst_l3_sm89.cu  ax_inst_l3_sm90.cu  ax_inst_presets.cu  ax_wgmma_smoke.cu
tools/: ax_manifest_tool.cpp  gen_instantiations.py  gen_layer_adapters.cpp  gen_registry_index.py  validate_manifest.py
tools/axprimitives/: wgmma_sanitize.py
(+143 files in other folders)
